Fix HTML overflow issue in index.css

--- a/apps/web/src/styles/index.css
+++ b/apps/web/src/styles/index.css
@@ -11,9 +11,9 @@ body[style], body[data-scroll-locked] {
 } */
 /* Ends - To fix radix CLS on dropdown and modal */
 
-html {
+/* html {
   @apply overflow-x-hidden overflow-y-scroll;
-}
+} */
 
 body {
   @apply min-h-screen bg-white text-black antialiased dark:bg-black dark:text-white;
